Fix z-index

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,9 @@
     transform: rotate(360deg);
   }
 }
+
+
+.Socket {
+  position: relative;
+  z-index: 1;
+}
